# IOT_Project

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README copy.md  README.md  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 097e9ec87ed0_init.py  122efe238e95_value.py  64911b7b909e_controller.py  9b8407f18b86_value.py
app/: exceptions.py  main.py
app/api/: deps.py
app/api/endpoints/: chat.py  controller.py  messages.py  raspberry.py  sensors.py
app/config/: llm.py  settings.py
app/db/: crud.py  database.py  models.py  schemas.py
app/utils/: logger.py
client/: package-lock.json  package.json
client/src/: App.css  App.js
client/src/components/: Chat.js  Chat.jsx  ControllerTab.js  SensorTab.js  Tabs.js  TabsSection.jsx  mockData.js
client/src/helpers/: fetchHelper.js
tests/: conftest.py  test.env
tests/api/: test_todos.py
