[project]
name = "Green House Assistant"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Soroush Fathi", email = "soroushfathi6666@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.112.0",
    "sqlalchemy>=2.0.31",
    "pydantic>=2.8.2",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "colorlog>=6.8.2",
    "sentry-sdk[fastapi]>=2.12.0",
    "pydantic-settings>=2.4.0",
    "httpx[socks]",
    "langchain",
    "langchain_community",
    "openai",
    "websockets",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye.scripts]
dev = { cmd = "fastapi dev", env_file = ".env" }

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.2",
    "coverage>=7.6.1",
    "pytest-asyncio>=0.23.8",
    "pre-commit>=3.8.0",
]


[tool.ruff]
line-length = 88
exclude = [
    "alembic"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "N",  # pep8 naming
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "ASYNC", # flake8 async
    "LOG", # flake8 logging
    "ANN", # flake8 annotations,
]
ignore = [
    "B904", # raise error in try/except
    "B008",  # call Depends() in parameter default
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
]

# [tool.ruff.lint.per-file-ignores]
# "app/utils/schemas.py" = ["UP007"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "E402", "ANN"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
